--- a/src/main/webapp/files/result.css
+++ b/src/main/webapp/files/result.css
@@ -17,28 +17,35 @@ body {
     background-size:100%;
 }
 #head {
+   
+}
+#head a{
    position: relative;
-left: 1000px;
+left: 1005px;
+top: 26px;
 width: 101px;
 background-color: #9090F5;
-margin: auto 221px;
-padding:23px 53px;
+margin: 12px -304px;
+padding: 32px 54px;
 border-radius: 12px;
-}
-#head.a{
-    background-color: #3C6844;
-    
-    text-decoration: none;
-    text-shadow: 1px 0px #1E271E;
-    color: black;
+text-decoration: none;
+text-shadow: 1px 0px #1E271E;
+color: black;
 
+}
+#head .hint{
+    font-weight: 100;
+        font-family: Verdana,sans-serif,cursive;
+        font-size: x-large;
+    color: #33ccff;
+     text-shadow: 1px 3px #1E271E;
 }
 #head a:hover{
     color: #ffffff;
 }
 .blocks {
 display: block;
-background: url(twitter-cd-disc-icon.png) no-repeat;
+
 width: 0px;
 height: 0px;
 position: relative;
@@ -67,7 +74,7 @@ margin: -2px -10px;
         top:51px;
         left: 8px;
         color: paleturquoise;
-        
-        font-family: sans-serif,cursive;
+        font-weight: 100;
+        font-family: Verdana,sans-serif,cursive;
         font-size: x-large;
     }
